# parallel_computing

./: README.md
.github/workflows/: main.yml
cuda/: CMakeLists.txt
cuda/.github/workflows/: ci.yml
cuda/abs/: main.cu
cuda/countOnes/: main.cu
cuda/count_bits/: main.cu
cuda/fibonacci/: main.cu
cuda/find_first_zero_byte/: main.cu
cuda/find_lsb/: main.cu
cuda/find_msb/: main.cu
cuda/hello/: Kernel.cu
cuda/hello_cuda/: check_dim.cu  vector_sum.cu
cuda/memory_management/: vector_multipe_threads.cu
cuda/reverseBits/: main.cu
cuda/swap_odd_evenbits/: main.cu
cuda/three_sum/: main.cu
cuda/two_sum/: main.cu
cuda/vector_addition/: vector.cu  vector_multipe_threads.cu  vector_multiple_threads.cu
cuda/xor/: main.cu
hello/: Kernel.cu  Kernel.h  vector_addition.cpp
hello_cuda/: hello_cuda.cu
